# macroeconomics_calculators

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  ad_as_calculator.py  bop_calculator.py  exchange_rate_calculator.py  fiscal_multiplier_calculator.py  gdp_calculator.py  inflation_rate_calculator.py  interest_rate_calculator.py  is_lm_calculator.py  phillips_curve_calculator.py  pyproject.toml  unemployment_rate_calculator.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_calculators.py
